--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -102,53 +102,77 @@
   .scroll p {
     animation: scrollAnimation 2s infinite;
   }
-
-  @media only screen and (max-width: 480px) {
-    .page{
-        position: relative;
-        background-color:rgb(18, 3, 33);
-        height: 100%;
+  @media (min-width: 1025px) and (max-width: 1800px){
+    .img-styles img {
+      width: 240px;
+      height: 240px;
+      margin: 5px;
+      filter: blur(1px);
     }
-    .page-one {
-        position: relative;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
+    .create {
+      font-size: 42px;
+      font-weight: bold;
     
-  .scroll {
-    position: absolute;
-    top: calc(50% + 360px); 
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    font-weight: 600;
-    font-size: 20px;
+    }
+    
+      #boutt {
+        border-radius: 50px;
+        background-color: #809ad4;
+        padding: 14px 40px;
+        margin-top: 10px;
+        color: white;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        transition: all 0.2s ease-in-out;
+        text-decoration: none;
+        
+      
+      }
   }
-  .img-gallery {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-top: 50px;
+  @media (min-width: 480px) and (max-width: 1025px) {
+    .img-styles img {
+      width: 300px;
+      height: 300px;
+      margin: 6px;
+      filter: blur(1px);
+    }
   }
-
-  .img-styles {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    margin-left: -100px;
-  }
-
-  .img1 {
-    margin: 20px;
-    max-width: 280px;
-    height: auto;
-    border-radius: 6px;
-  }
-.create{
-    margin-top: -100px;
-    font-size: 40px;
-}
+  @media only screen and (max-width: 480px) {
+    .img-styles {
+      /* Your existing styles */
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      position: relative;
+      margin: 5;
+     
+    }
+    
+    .img-styles img {
+      width: 110px;
+      height: 110px;
+      margin: 5px;
+      filter: blur(1px);
+    }
+    .create {
+      font-size: 22px;
+      font-weight: bold;
+    
+    }
+    
+      #boutt {
+        border-radius: 50px;
+        background-color: #809ad4;
+        padding: 12px 30px;
+        margin-top: 10px;
+        color: white;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        transition: all 0.2s ease-in-out;
+        text-decoration: none;
+        
+      
+      }
   }
