--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,6 +13,7 @@
   .app-name {
     background-color: transparent;
     border: none;
+    font-family: cursive;
     text-decoration: none;
     color: white;
     font-size: 1.4rem;
@@ -262,6 +263,7 @@ color: #bfbcbc;
 .app-name {
   background-color: transparent;
   border: none;
+  font-family: cursive;
   text-decoration: none;
   color: white;
   margin-left: 1rem;
